Adding locking to sound input client

BUG: 309443