simonlib/simonsound/simonsoundinput.h
@@ -28,6 +28,7 @@ class QAudioInput;
 #include <simonsound/soundbackendclient.h>
 #include <QHash>
 #include <QObject>
+#include <QMutex>
 
 class SoundInputClient;
 class SoundBackend;
@@ -42,6 +43,7 @@ class SimonSoundInput : public QObject, public SoundBackendClient
     void inputStateChanged(SimonSound::State state);
 
   private:
+    QMutex m_lock;
     SimonSound::DeviceConfiguration m_device;
     SoundBackend *m_input;
     QHash<SoundInputClient*, qint64> m_activeInputClients;
@@ -71,7 +73,7 @@ class SimonSoundInput : public QObject, public SoundBackendClient
     bool activate(SoundClient::SoundClientPriority priority);
 
     bool isActive() { return (m_activeInputClients.count() > 0); }
-    
+
     int bufferSize();
     void processData(const QByteArray& data);
 
